--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Varela Round',-apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
   Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
@@ -55,15 +55,15 @@ li{
 @media (max-width : 767px )
 {
   h2{
-    font-size: 25px;
+    font-size: 27px;
   }
   p{
-    font-size: 18px;
+    font-size: 20px;
   }
   h3{
-    font-size: 24px;
+    font-size: 25px;
     }
     li{
-      font-size: 18px;
+      font-size: 20px;
     }
 }
